Devariabilize the service name and add a regex to identify the progname
The handler of this role can be called by a lot of other roles.
But if the role is not loaded, the distrib dependant service name
variable is not loaded and thus the handler failed. So the service name
must be hardcoded.

--- a/templates/Debian_syslog.conf.j2
+++ b/templates/Debian_syslog.conf.j2
@@ -24,9 +24,9 @@ filter f_{{ syslog_config_name }} {
     level({{ syslog_level }});
 {% endif %}
 {% if syslog_program_name == 'php-fpm' %}
-    program("{{ syslog_program_name }}") or program("ool");
+    program("^{{ syslog_program_name }}") or program("ool");
 {% else %}
-    program("{{ syslog_program_name }}");
+    program("^{{ syslog_program_name }}");
 {% endif %}
 };
 
