Add more groups customization for the crontabs (part 2)

--- a/templates/Debian_syslog.conf.j2
+++ b/templates/Debian_syslog.conf.j2
@@ -1,4 +1,4 @@
-{% if syslog_src_devlog is defined %}
+{% if syslog_src_devlog is defined and syslog_src_devlog != '/dev/log' %}
 # Source
 source s_{{ syslog_config_name }} {
     unix-dgram("{{ syslog_src_devlog }}");
